<resources>
    <string name="app_name">澳洋</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="comment">  写评论...</string>
    <string name="article">文章</string>
    <string name="reserve">预定</string>
    <string name="mine">我的</string>
    <string name="contact_cepartment">联系部</string>
    <string name="article_text">文章详情</string>
    <string name="comment_text">用户名</string>
    <string name="user">新增缴费账户</string>
    <string name="settingtime">选择时间日期</string>
    <string name="searchrooms">搜索房间</string>
    <string name="notice">通知</string>
    <string name="roomyuyue">房间预约</string>
    <string name="yudingrooms">预定房间</string>
    <string name="way_of_chagre">选择支付方式</string>
    <string name="alipay">支付宝支付</string>
    <string name="wechat">微信支付</string>
    <string name="cash">现金支付</string>
    <string name="changeheard">更改头像</string>
    <string name="local">从相册中获取</string>
    <string name="tackphoto">拍摄</string>
    <string name="username">昵称:</string>
    <string name="changephone">号码:</string>
    <string name="changepassed">密码:</string>
    <string name="exit_this_account">退出当前帐号</string>
    <string name="my_setting">我的设置</string>
    <string name="changepassedword">修改密码</string>
    <string name="searchcompany">搜索公司</string>
    <string name="text_data">缴费金额：</string>
    <string name="checkyourpassed">再次确认密码</string>
    <string name="add_again">请在次填入</string>
    <string name="your_comment">评论</string>
    <string name="news">新闻</string>
    <string name="your_notices">通知</string>
    <string name="hello">Hello World, XListViewActivity!</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">点击查看更多...</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="companyname">公司名称:</string>
    <string name="agree">同意</string>
    <string name="disagree">不同意</string>
    <string name="submit">提交</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="allcompanyname">所有公司</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
s
</resources>
