<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changepassedword"
            android:id="@+id/text_changepassed"
            android:layout_alignBaseline="@+id/et_passed"
            android:layout_alignBottom="@+id/et_passed"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <EditText
            android:hint="请设置帐号密码"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_passed"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="66dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkyourpassed"
            android:id="@+id/text_be_sure_your_passed"
            android:layout_alignBaseline="@+id/et_passedagain"
            android:layout_alignBottom="@+id/et_passedagain"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <EditText
            android:hint="@string/add_again"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_passedagain"
            android:layout_marginTop="48dp"
            android:layout_below="@+id/et_passed"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/the_confirm_button"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/button_sure"/>
</RelativeLayout>