<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:weightSum="1"
    >
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:id="@+id/framelayout"
        android:layout_weight="1">
    </FrameLayout>

    <!--BUTTON-->
    <LinearLayout
        android:background="@mipmap/select_bottom_navigation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <RelativeLayout
            android:id="@+id/relative_article"
            android:paddingLeft="45dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:paddingTop="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageButton
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/home_icon_not"
                    android:id="@+id/imageartice_button"/>
                <TextView
                    android:paddingTop="3dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:textColor="#82858b"
                    android:id="@+id/textview_article"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/article"/>
            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relative_reserve"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:paddingTop="6dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageButton
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/reservation_icon_not"
                    android:id="@+id/imagereserve_button"/>
                <TextView
                    android:paddingTop="3dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#82858b"
                    android:id="@+id/textview_reserve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reserve"/>
            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_mine"

            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:paddingTop="6dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageButton
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/user_icon_not"
                    android:id="@+id/imagemine_button"/>
                <TextView
                    android:paddingTop="3dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#82858b"
                    android:id="@+id/textview_mine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mine"/>
            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_contact"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:paddingTop="6dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageButton
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/contact_icon_not"
                    android:id="@+id/imagecontact_button"/>
                <TextView
                    android:paddingTop="3dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#82858b"
                    android:id="@+id/textview_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_cepartment"/>
            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>


</LinearLayout>
