<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:text="@string/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_name"
        android:layout_alignTop="@+id/change_user"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp" />
    <TextView
        android:maxLines="1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#82858b"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/change_user"
        android:gravity="left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.09"
        android:layout_alignBottom="@+id/view_line8"
        android:layout_toRightOf="@+id/text_name"
        android:layout_toEndOf="@+id/text_name" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#82858b"
        android:id="@+id/view_line6"
        android:layout_below="@+id/text_numberphone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changephone"
        android:id="@+id/text_numberphone"
        android:layout_alignTop="@+id/change_phone"
        android:layout_alignLeft="@+id/text_name"
        android:layout_alignStart="@+id/text_name" />
    <TextView
        android:maxLines="1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#82858b"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/change_phone"
        android:gravity="left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.09"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/view_line8"
        android:layout_toEndOf="@+id/text_numberphone"
        android:layout_toRightOf="@+id/text_numberphone" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#82858b"
        android:layout_below="@+id/text_passed"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/view_line7" />
    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changepassed"
        android:id="@+id/text_passed"
        android:layout_alignTop="@+id/change_passedword"
        android:layout_alignLeft="@+id/text_numberphone"
        android:layout_alignStart="@+id/text_numberphone" />
    <TextView
        android:maxLines="1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#82858b"
        android:inputType="numberPassword"
        android:textSize="20sp"
        android:drawableRight="@mipmap/chevron_right"
        android:textStyle="bold"
        android:id="@+id/change_passedword"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.09"
        android:layout_below="@+id/view_line6"
        android:layout_toEndOf="@+id/text_passed"
        android:layout_marginTop="49dp"
        android:layout_toRightOf="@+id/text_passed" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#82858b"
        android:id="@+id/view_line8"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/change_user"
        android:layout_alignEnd="@+id/change_user"
        android:layout_marginTop="79dp" />
    <Button
        android:id="@+id/btn_sure"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@mipmap/the_confirm_button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>